[package]
name = "rust-umbra"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.0"
winit = { version = "0.30.0", features = ["rwh_06"] }
glam = "0.29.2"
pollster = "0.4.0"
env_logger = "0.11.0"
log = "0.4.0"
bytemuck = { version = "1.0", features = ["derive"] }
futures-intrusive = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
