[package]
name = "rust-umbra"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27"
winit = "0.30.12"
glam = "0.29.2"
pollster = "0.4.0"
env_logger = "0.11.0"
log = "0.4.0"
bytemuck = { version = "1.0", features = ["derive"] }
futures-intrusive = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.33"
eframe = "0.33"
egui_node_graph2 = "0.7.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
egui-wgpu = "0.33"
egui-winit = "0.33"
egui-snarl = { version = "0.9.0", features = ["serde"] }
russimp = "3.2.1"
rfd = "0.17.2"
